# to-be-done

./: README.md  custom_types.py  main.py  mpd.json  pyproject.toml
src/: .clangd  CMakeLists.txt  Makefile  compile_flags.txt  main.cpp  my_app
src/widgets/: GraphView.cpp  GraphView.h
